--- a/src/card/Card.css
+++ b/src/card/Card.css
@@ -44,7 +44,7 @@
 
 /* Estilo para el espacsio de la imagen del curso */
 .curso-image-placeholder {
-    width: 250px;
+    width: 100%;
     height: 250px; /* Aumenta la altura de la imagen */
     background-color: #e0e0e0;
     border-radius: 8px;
